2006-10-07  Yen-Ju Chen <yjchen at gmail>

	* Able to open local file.

2006-10-03  Yen-Ju Chen <yjchen at gmail>

	* Initial import.
	* Put GNUstep event into GLib main loop.
	* Clean up.
