@@ -1,3 +1,7 @@
+2006-10-17  Yen-Ju Chen <yjchen at gmail>
+
+	* Show title, location and link.
+
 2006-10-07  Yen-Ju Chen <yjchen at gmail>
 
 	* Able to open local file.
